[gd_scene load_steps=22 format=3 uid="uid://cvtwnd0www7vq"]

[ext_resource type="Texture2D" uid="uid://bhbngv4le4u2e" path="res://sprites/UI/projector.png" id="1"]
[ext_resource type="Texture2D" uid="uid://cufi3iftxtppy" path="res://sprites/UI/projector2.png" id="2"]
[ext_resource type="Script" path="res://scripts/battle/BattleUI.gd" id="3"]
[ext_resource type="FontFile" uid="uid://cd41usim7lhx5" path="res://fonts/TTYDfont.otf" id="4"]
[ext_resource type="Texture2D" uid="uid://dv6vm6t7lqe2y" path="res://sprites/UI/border2.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dpcwinv1auw4r" path="res://sprites/UI/cursor.png" id="6"]
[ext_resource type="PackedScene" uid="uid://suprso1cju3q" path="res://scenes/battle/BattleChoice.tscn" id="7"]
[ext_resource type="Texture2D" uid="uid://dto4dwitljl50" path="res://sprites/UI/canswitch.png" id="8_2kult"]
[ext_resource type="Texture2D" uid="uid://xx8sxbbhfyxu" path="res://sprites/UI/bar.png" id="8_s4p4u"]
[ext_resource type="PackedScene" uid="uid://b5knj5utnd1mx" path="res://scenes/sfx.tscn" id="10_i0kb7"]

[sub_resource type="FontFile" id="1"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("4"), ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Gradient" id="2"]
offsets = PackedFloat32Array(0, 0.216749)
colors = PackedColorArray(1, 1, 1, 0.501961, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="3"]
gradient = SubResource("2")

[sub_resource type="Image" id="Image_o6msf"]
data = {
"data": PackedByteArray(228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228),
"format": "RGB8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="5"]
image = SubResource("Image_o6msf")

[sub_resource type="FontFile" id="8"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("4"), ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p78u7"]

[sub_resource type="StyleBoxLine" id="7"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxEmpty" id="6"]

[sub_resource type="FontFile" id="9"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("4"), ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/45/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/45/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/45/0/ascent = 0.0
cache/0/45/0/descent = 0.0
cache/0/45/0/underline_position = 0.0
cache/0/45/0/underline_thickness = 0.0
cache/0/45/0/scale = 1.0
cache/0/45/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/45/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/45/0/kerning_overrides/45/0 = Vector2(0, 0)
cache/0/45/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/60/0/ascent = 0.0
cache/0/60/0/descent = 0.0
cache/0/60/0/underline_position = 0.0
cache/0/60/0/underline_thickness = 0.0
cache/0/60/0/scale = 1.0
cache/0/60/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/45/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/60/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_ljf7f"]
font_size = 60
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[node name="BattleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")
font = SubResource("1")

[node name="Projector" type="TextureRect" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 62.0
offset_top = -90.0
offset_right = 306.0
offset_bottom = 110.0
grow_vertical = 0
pivot_offset = Vector2(0, 128)
texture = ExtResource("1")

[node name="ProjectorLight" type="Control" parent="Projector"]
anchors_preset = 0
offset_left = 308.348
offset_top = -205.565
offset_right = 348.348
offset_bottom = -165.565
rotation = 6.6

[node name="Polygon2d" type="Polygon2D" parent="Projector/ProjectorLight"]
modulate = Color(1, 1, 1, 0.419608)
show_behind_parent = true
position = Vector2(-290.812, -316.279)
scale = Vector2(1.09268, 1.00284)
texture = SubResource("3")
texture_rotation = 1.01578
polygon = PackedVector2Array(-189.202, 858.001, 351.612, 328.47, 267.016, 284.183)

[node name="BattleChoice" parent="Projector" instance=ExtResource("7")]
visible = false
position = Vector2(360, -195)

[node name="ActionMenu" type="Control" parent="."]
visible = false
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.264
offset_top = -140.517
offset_right = -89.2645
offset_bottom = -100.517

[node name="Background" type="Polygon2D" parent="ActionMenu"]
position = Vector2(-116.376, -19.0082)
scale = Vector2(0.4, 0.4)
color = Color(0.768627, 0.768627, 0.768627, 1)
texture = SubResource("5")
texture_offset = Vector2(30, 0)
texture_scale = Vector2(0.204, 0.208)
polygon = PackedVector2Array(-0.627899, 93.0483, 3.88885, 72.2496, 9.43947, 56.2916, 16.3777, 44.4966, 28.1727, 32.0077, 37.8863, 25.7633, 52.4567, 20.9065, 83.3769, 14.7067, 940.1, 14.7626, 975.469, 20.0492, 998.34, 33.0438, 1012.37, 54.3548, 1021.56, 91.4665, 1023.14, 553.014, 1014.33, 583.417, 1005.49, 595.891, 987.299, 607.846, 960.961, 615.194, 74.7125, 613.695, 45.1353, 607.88, 23.5008, 596.135, 8.66568, 578.209, -0.202881, 553.763)

[node name="Background2" type="Polygon2D" parent="ActionMenu/Background"]
modulate = Color(1, 1, 1, 0.388235)
show_behind_parent = true
position = Vector2(25, 15)
color = Color(0.768627, 0.768627, 0.768627, 1)
texture = SubResource("5")
texture_scale = Vector2(0.204, 0.208)
polygon = PackedVector2Array(-0.627899, 93.0483, 3.88885, 72.2496, 9.43947, 56.2916, 16.3777, 44.4966, 28.1727, 32.0077, 37.8863, 25.7633, 52.4567, 20.9065, 83.3769, 14.7067, 940.1, 14.7626, 975.469, 20.0492, 998.34, 33.0438, 1012.37, 54.3548, 1021.56, 91.4665, 1023.14, 553.014, 1014.33, 583.417, 1005.49, 595.891, 987.299, 607.846, 960.961, 615.194, 74.7125, 613.695, 45.1353, 607.88, 23.5008, 596.135, 8.66568, 578.209, -0.202881, 553.763)

[node name="Background3" type="Polygon2D" parent="ActionMenu/Background"]
modulate = Color(1, 1, 1, 0.211765)
show_behind_parent = true
position = Vector2(50, 30)
color = Color(0.768627, 0.768627, 0.768627, 1)
texture = SubResource("5")
texture_scale = Vector2(0.204, 0.208)
polygon = PackedVector2Array(-0.627899, 93.0483, 3.88885, 72.2496, 9.43947, 56.2916, 16.3777, 44.4966, 28.1727, 32.0077, 37.8863, 25.7633, 52.4567, 20.9065, 83.3769, 14.7067, 940.1, 14.7626, 975.469, 20.0492, 998.34, 33.0438, 1012.37, 54.3548, 1021.56, 91.4665, 1023.14, 553.014, 1014.33, 583.417, 1005.49, 595.891, 987.299, 607.846, 960.961, 615.194, 74.7125, 613.695, 45.1353, 607.88, 23.5008, 596.135, 8.66568, 578.209, -0.202881, 553.763)

[node name="Background4" type="Polygon2D" parent="ActionMenu/Background"]
modulate = Color(0.631373, 0.588235, 0.588235, 0.192157)
show_behind_parent = true
position = Vector2(75, 45)
color = Color(0.768627, 0.768627, 0.768627, 1)
texture = SubResource("5")
texture_scale = Vector2(0.204, 0.208)
polygon = PackedVector2Array(-0.627899, 93.0483, 3.88885, 72.2496, 9.43947, 56.2916, 16.3777, 44.4966, 28.1727, 32.0077, 37.8863, 25.7633, 52.4567, 20.9065, 83.3769, 14.7067, 940.1, 14.7626, 975.469, 20.0492, 998.34, 33.0438, 1012.37, 54.3548, 1021.56, 91.4665, 1023.14, 553.014, 1014.33, 583.417, 1005.49, 595.891, 987.299, 607.846, 960.961, 615.194, 74.7125, 613.695, 45.1353, 607.88, 23.5008, 596.135, 8.66568, 578.209, -0.202881, 553.763)

[node name="ProjectorLight2" type="Polygon2D" parent="ActionMenu/Background"]
modulate = Color(1, 1, 1, 0.733333)
show_behind_parent = true
position = Vector2(-1407.59, -1457.53)
scale = Vector2(5, 5)
texture = SubResource("3")
texture_rotation = 1.71915
polygon = PackedVector2Array(-120.381, -3.03941, -75.8837, 49.9337, 285.005, 409.756, 476.631, 302.983, -47.2782, 40.3986)

[node name="Actions" type="ItemList" parent="ActionMenu"]
self_modulate = Color(1, 1, 1, 0.854902)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -81.0
offset_top = -6.0
offset_right = 157.0
offset_bottom = 385.0
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/guide_color = Color(1, 1, 1, 0)
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 1
theme_override_constants/icon_margin = 2
theme_override_constants/line_separation = 0
theme_override_fonts/font = SubResource("8")
theme_override_styles/panel = SubResource("StyleBoxEmpty_p78u7")
theme_override_styles/focus = SubResource("7")
theme_override_styles/selected = SubResource("7")
theme_override_styles/selected_focus = SubResource("7")
theme_override_styles/cursor = SubResource("6")
theme_override_styles/cursor_unfocused = SubResource("7")
select_mode = 1

[node name="ActionCursor" type="Sprite2D" parent="ActionMenu"]
texture_filter = 1
position = Vector2(-93.186, 6.47345)
scale = Vector2(2, 2)
texture = ExtResource("6")

[node name="ActionCursor2" type="Sprite2D" parent="ActionMenu/ActionCursor"]
modulate = Color(0.305882, 0.196078, 0.196078, 0.482353)
show_behind_parent = true
texture_filter = 1
position = Vector2(1, 1)
texture = ExtResource("6")

[node name="FPLabels" type="Control" parent="ActionMenu"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="NinePatchRect" parent="ActionMenu"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -60.0
offset_right = 230.0
offset_bottom = 20.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("5")
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 40
patch_margin_bottom = 40

[node name="Label" type="Label" parent="ActionMenu/Title"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = SubResource("9")
text = "Tactics"
label_settings = SubResource("LabelSettings_ljf7f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Shadow" type="NinePatchRect" parent="ActionMenu/Title"]
modulate = Color(0, 0, 0, 0.368627)
show_behind_parent = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.8921
offset_top = 9.93253
offset_right = 11.8921
offset_bottom = 9.93253
texture = ExtResource("5")
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 40
patch_margin_bottom = 40

[node name="Graphic" type="TextureRect" parent="."]
visible = false
self_modulate = Color(0.113725, 0, 0.341176, 1)
layout_mode = 0
anchor_top = 1.003
anchor_bottom = 1.003
offset_left = -183.0
offset_top = -182.863
offset_right = 183.0
offset_bottom = 183.137
rotation = 22.5
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(183, 183)
texture = ExtResource("2")
expand_mode = 1

[node name="CanSwitch" type="TextureRect" parent="."]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.9
anchor_right = 0.2
anchor_bottom = 0.9
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
texture = ExtResource("8_s4p4u")
expand_mode = 1

[node name="Arrows" type="TextureRect" parent="CanSwitch"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_2kult")
stretch_mode = 5

[node name="SFX" parent="." instance=ExtResource("10_i0kb7")]
